--- a/serverApp/src/index.html
+++ b/serverApp/src/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <p>index.html global</p>
-    <app-body></app-body>
+    <app-root></app-root>
   </body>
 </html>
